--- a/data/applications/goodResponses/4284579840.html
+++ b/data/applications/goodResponses/4284579840.html
@@ -1,1 +1,28 @@
-<!DOCTYPE html><html lang="de"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Bewerbung – Web/UI Engineer – Canonical</title></head><body style="margin:0;padding:0;background:#f8f9fb;color:#222;font-family:Arial,Helvetica,sans-serif;"><div style="max-width:720px;margin:24px auto;padding:24px;background:#fff;border:1px solid #e5e7eb;border-radius:10px;box-shadow:0 1px 3px rgba(0,0,0,0.08);"><h1 style="margin:0 0 8px;font-size:22px;color:#111;">Bewerbung als Web/UI Engineer (JS, CSS, React, Flutter)</h1><p style="margin:0 0 16px;color:#555;font-size:14px;">Canonical · Hamburg/Remote</p><hr style="border:none;border-top:1px solid #eee;margin:16px 0;"><p style="margin:0 0 12px;font-size:16px;line-height:1.6;">Sehr geehrtes Recruiting-Team von Canonical,</p><p style="margin:0 0 12px;font-size:16px;line-height:1.6;">JavaScript, HTML und CSS sind seit Jahren die Grundlage meiner Arbeit als Frontend‑Entwickler. Ich entwickle datenreiche, performante Interfaces mit React oder Angular und lege besonderen Wert auf Barrierefreiheit, konsistente Komponenten und sauberes API‑Design – ein Ansatz, der hervorragend zu Ihrer Arbeit mit dem Vanilla Framework und gut dokumentierten REST‑Schnittstellen passt.</p><p style="margin:0 0 12px;font-size:16px;line-height:1.6;">In meiner bisherigen Rolle bei einer Online‑Marketing‑Agentur habe ich das Frontend einer Lotterie‑Website für den Hauptsponsor eines Bundesligavereins verantwortet. Die Kampagnenseite hat messbar zu mehr Versicherungsabschlüssen geführt. Zudem habe ich bei einem Campervan‑Vermietungsunternehmen den Buchungsprozess mit Angular neu gestaltet und so die Abbruchraten deutlich gesenkt. Serverseitig arbeite ich häufig mit Node.js und Express, setze gerne TypeScript ein und sichere Qualität mit Jest und Puppeteer.</p><p style="margin:0 0 12px;font-size:16px;line-height:1.6;">Ich freue mich besonders auf die Zusammenarbeit in einem verteilten Team, Architektur‑ und Codereviews sowie auf die Weiterentwicklung einer wiederverwendbaren React‑Toolbox. Flutter verfolge ich mit großem Interesse und baue hier meine Kenntnisse gezielt aus, um perspektivisch auch in Multi‑Plattform‑Vorhaben mitzuwirken.</p><p style="margin:0 0 12px;font-size:16px;line-height:1.6;">Gern bringe ich meine Erfahrung in Typisierung mit TypeScript, testgetriebener Entwicklung sowie in Performance‑Optimierung ein, um Canonicals Webprodukte weiter zu stärken. Über die Möglichkeit eines Kennenlerngesprächs freue ich mich sehr.</p><p style="margin:0;font-size:16px;line-height:1.6;">Mit freundlichen Grüßen</p></div></body></html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bewerbung als Web/UI Engineer (Web Developer)</title>
+</head>
+<body style="margin:0;background:#f5f5f7;">
+  <div style="max-width:760px;margin:40px auto;padding:0 16px;">
+    <div style="font-family:Arial,sans-serif;color:#222;line-height:1.5;background:#fff;border:1px solid #e5e5e5;border-radius:6px;padding:20px;">
+      <h1 style="font-size:20px;margin:0 0 8px;color:#111;">Bewerbung als Web/UI Engineer (Web Developer)</h1>
+      <p style="margin:0 0 10px;">Sehr geehrtes Canonical-Team,</p>
+      <p style="margin:0 0 10px;">Ihre Ausschreibung für eine Web/UI-Engineer-Rolle hat mich sofort angesprochen. Als frontend-orientierter Full-Stack-Entwickler mit starkem Fokus auf JavaScript, HTML, CSS und modernen Frameworks bringe ich genau die Erfahrung mit, die Sie für datenreiche, zuverlässige Benutzeroberflächen in React suchen.</p>
+      <p style="margin:0 0 10px;">Auszug meiner Erfahrung: Entwicklung des Frontends einer Lotterie-Website für den Hauptsponsor eines Bundesligavereins (mit deutlich gesteigerten Abschlusszahlen) sowie die Neugestaltung eines kompletten Buchungsprozesses für ein Campervan-Vermietungsunternehmen mit Angular, wodurch die Abbruchraten signifikant sanken.</p>
+      <ul style="margin:0 0 10px 18px;padding:0;">
+        <li style="margin:0 0 6px;">React und TypeScript im Frontend; hohe Codequalität durch Typisierung</li>
+        <li style="margin:0 0 6px;">Node.js/Express im Backend für API-Integration</li>
+        <li style="margin:0 0 6px;">Testing mit Jest und Puppeteer, Fokus auf Stabilität, Performance und UX</li>
+        <li style="margin:0 0 6px;">Komponentengetriebene Entwicklung und Design-Systeme</li>
+      </ul>
+      <p style="margin:0 0 10px;">Die Idee, mit einem offenen React-Toolkit und einer zentralen Präsentationsschicht Konsistenz über Produkte hinweg zu schaffen, spricht mich sehr an. Ich arbeite gern kollaborativ an Spezifikationen, Code-Reviews, Dokumentation und kontinuierlicher Verbesserung von Engineering-Praktiken.</p>
+      <p style="margin:0 0 10px;">Ihre remote-freundliche Kultur sowie die Nähe zu Open Source passen hervorragend zu mir. Ich bin motiviert, schnell Wirkung zu erzielen und Frontends zu liefern, die Nutzer begeistern und Geschäftswerte messbar steigern.</p>
+      <p style="margin:0 0 2px;">Mit freundlichen Grüßen</p>
+      <p style="margin:0;">—</p>
+    </div>
+  </div>
+</body>
+</html>
