--- a/data/applications/examples/adesso.html
+++ b/data/applications/examples/adesso.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bewerbung Full Stack Engineer (Google Cloud) - John Doe - Company Name</title>
+    <title>Bewerbung Full Stack Engineer (Google Cloud) - John Doe - Adesso</title>
     <style>
         /* Basic reset */
         * {
