Updated example text

--- a/data/applications/examples/adesso.html
+++ b/data/applications/examples/adesso.html
@@ -142,9 +142,7 @@
                 Web
                 Developer bringe ich praktische Erfahrung im Aufbau moderner Webanwendungen mit. Was mich antreibt, sind
                 kontinuierliches Lernen und die Arbeit an wirkungsvollen Kundenl&ouml;sungen. Ich freue mich, in
-                Cloud-Projekten zu lernen und zugleich messbaren Kundennutzen zu schaffen. Ich sch&auml;tze ihre
-                famili&auml;re
-                Kultur, das adessi-Gef&uuml;hl und die klaren Weiterentwicklungspfade.</p>
+                Cloud-Projekten zu lernen und zugleich messbaren Kundennutzen zu schaffen.</p>
 
             <p>In Projekten konnte ich mein Wissen
                 praktisch anwenden, indem ich einen neuen Buchungsprozess integriert und eine Lotterie-Website
